--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML>
 <!--
-	Big Picture by HTML5 UP
+    Pulsafe landing page based on 
+	Big Picture template by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Pulsafe</title>
+		<title>Pulsafe - seguimiento activo de personas dependientes</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
