Added background images and logo

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
 -->
 <html>
 	<head>
-		<title>Pulsafe - seguimiento activo de personas dependientes</title>
+		<title>Pulsafe: seguimiento activo de personas dependientes</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Plataforma para el seguimiento activo de personas dependientes" />
+		<meta name="keywords" content="pulso, localización, dependencia, seguimiento, pulsafe, monitorizar, constantes vitales, salud" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.poptrox.min.js"></script>
@@ -51,17 +51,20 @@
 		<!-- Intro -->
 			<section id="inicio" class="main style1 dark fullscreen">
 				<div class="content container 75%">
+                    
+                        
 					<header>
+                    <img src="images/logo.svg" width="28%" style="margin-bottom:-15%;"/>
 						<h2>Pulsafe</h2>
 					</header>
-					<p>Una plataforma para el seguimiento activo de personas dependientes</br> en <b><a href="http://html5up.net">#HackForGood Vigo 2015</a></b>.</p>
+					<p>Una plataforma para el seguimiento activo de personas dependientes</br> en <b><a href="http://hackforgood.net/category/vigo/">#HackForGood Vigo 2015</a></b>.</p>
 					<footer>
 						<a href="#el-problema" class="button style2 down">El problema</a>
 					</footer>
 				</div>
 			</section>
 
-		<!-- One -->
+		<!-- El problema -->
 			<section id="el-problema" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
@@ -72,20 +75,20 @@
 				<a href="#nuestra-propuesta" class="button style2 down anchored">Next</a>
 			</section>
 
-		<!-- Two -->
+		<!-- Nuestra propuesta -->
 			<section id="nuestra-propuesta" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
 						<h2>Nuestra propuesta</h2>
 					</header>
-                    <p>Desde #HackForGood presentamos Pulsafe: una plataforma basada en dispositivos Wearables y Smartphones. Donde un <b>Guardi&aacute;n</b> podrá realizar un <b>seguimiento activo</b> de la localizaci&oacute;n y las constantes vitales de su <b>protegido o protegidos</b> de forma: rápida, inmediata y sencilla.</p>
+                    <p>Pulsafe: una plataforma basada en dispositivos Wearables y Smartphones. Donde un <b>Guardi&aacute;n</b> podrá realizar un <b>seguimiento activo</b> de la localizaci&oacute;n y las constantes vitales de su <b>protegido o protegidos</b> de forma: rápida, inmediata y sencilla.</p>
                     <p> Todo esto mediante una App y una infraestructura cloud, que permita del lado Guardi&aacute;n: <b>Localizaci&oacute;n</b> GPS, <b>consulta directa</b> de constantes, configuraci&oacute;n de <b>alarmas peri&oacute;dicas</b>, establecimiento de <b>umbrales de alerta</b>; y del lado protegido: publicaci&oacute;n y alerta <b>autom&aacute;tica</b> sin intervenci&oacute;n del mismo. 
                 </p>
 				</div>
 				<a href="#quienes-somos" class="button style2 down anchored">&nbsp;</a>
 			</section>
 
-		<!-- Work -->
+		<!-- Quienes somos -->
 			<section id="quienes-somos" class="main style3 primary">
 				<div class="content container">
 					<header>
@@ -141,10 +144,10 @@
 
 				<!-- Icons -->
 					<ul class="actions">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon fa-linkedin"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://twitter.com/" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://facebook.com/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://plus.google.com" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+						<li><a href="https://es.linkedin.com/" class="icon fa-linkedin"><span class="label">Dribbble</span></a></li>
 					</ul>
 
 				<!-- Menu -->
