--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 -->
 <html>
 	<head>
-		<title>Pulsafe: seguimiento activo de personas dependientes</title>
+		<title>Pulsafe: seguimiento activo de la salud de personas</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="Plataforma para el seguimiento activo de personas dependientes" />
 		<meta name="keywords" content="pulso, localización, dependencia, seguimiento, pulsafe, monitorizar, constantes vitales, salud" />
@@ -57,7 +57,7 @@
                     <img src="images/logo.svg" width="28%" style="margin-bottom:-15%;"/>
 						<h2>Pulsafe</h2>
 					</header>
-					<p>Una plataforma para el seguimiento activo de personas dependientes</br> en <b><a href="http://hackforgood.net/category/vigo/">#HackForGood Vigo 2015</a></b>.</p>
+					<p>Una plataforma para el seguimiento activo de de la salud de las personas</br> en <b><a href="http://hackforgood.net/category/vigo/">#HackForGood Vigo 2015</a></b>.</p>
 					<footer>
 						<a href="#el-problema" class="button style2 down">El problema</a>
 					</footer>
@@ -118,7 +118,7 @@
 					<div class="box container 75%">
 
 					<!-- Contact Form -->
-							<form method="post" action="#">
+							<form action="#">
 								<div class="row 50%">
 									<div class="6u"><input type="text" name="name" placeholder="Nombre" /></div>
 									<div class="6u"><input type="email" name="email" placeholder="Email" /></div>
@@ -142,13 +142,13 @@
 		<!-- Footer -->
 			<footer id="footer">
 
-				<!-- Icons -->
+				<!-- Icons 
 					<ul class="actions">
 						<li><a href="https://twitter.com/" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://facebook.com/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://plus.google.com" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 						<li><a href="https://es.linkedin.com/" class="icon fa-linkedin"><span class="label">Dribbble</span></a></li>
-					</ul>
+					</ul>-->
 
 				<!-- Menu -->
 					<ul class="menu">
